# Tsunagi-Ollama-bridge

./: LICENSE  OllamaGGUFMerge.py  README.md  pyproject.toml  qwen-vl-merge-unified.py  requirements.txt
advanced/: qwen-3-VL-Ollama_tuned_vission_quant.sh
prototype/: README.md
tsunagi_ollama_bridge/: OllamaGGUFMerge.py
tsunagi_ollama_bridge/ModelCores/: base.py  gemma4.py  qwen35.py  qwen_base.py
