[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsunagi-ollama-bridge"
version = "1.0.5-1"
description = "Modular GGUF patching tool for Ollama multimodal monoliths"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gguf",
    "numpy",
    "tqdm",
]

[project.scripts]
tsunagi-ollama = "tsunagi_ollama_bridge.main:main"
tsunagi-ollama-bridge = "tsunagi_ollama_bridge.main:main"

[tool.hatch.build.targets.wheel]
packages = ["tsunagi_ollama_bridge"]
